--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,7 @@
       <div class="recette">
         <a href="../pages/recette_v2.html">
           <figure>
-            <img src="../images/toasts-au-chevre-avocat-et-tomates-sechees.jpg" alt="toast" />
+            <img id="photo" src="../images/toasts-au-chevre-avocat-et-tomates-sechees.jpg" alt="toast" />
           </figure>
         </a>
         <br />
@@ -69,7 +69,7 @@
       <div class="recette">
         <figure>
           <a href="#">
-            <img src="..//images/crepes-au-chocolat.jpeg" alt="crepes" />
+            <img id="photo" src="..//images/crepes-au-chocolat.jpeg" alt="crepes" />
           </a>
         </figure>
         <br />
@@ -81,7 +81,7 @@
       <div class="recette">
         <figure>
           <a href="#">
-          <img src="../images/pancakes.jpg" alt="pancakes" />
+          <img id="photo" src="../images/pancakes.jpg" alt="pancakes" />
         </a>
       </figure>
         <br />
@@ -90,7 +90,7 @@
 
       <div class="recette">
         <figure>
-          <img src="../images/english-breakfast-muffin.jpg" alt="egg-bason" />
+          <img id="photo" src="../images/english-breakfast-muffin.jpg" alt="egg-bason" />
         </figure>
         <br />
         <a href="#">English egg and bacon muffin</a>
@@ -101,7 +101,7 @@
       <div class="recette">
         <figure>
           <a href="#">
-          <img src="../images/pain-perdu.jpg" alt="pain-perdu" />
+          <img id="photo" src="../images/pain-perdu.jpg" alt="pain-perdu" />
           </a>
         </figure>
         <br />
@@ -111,7 +111,7 @@
       <div class="recette">
         <figure>
           <a href="#">
-          <img src="../images/muffins-au-bacon-et-au-cheddar.jpg" alt="muffin" />
+          <img id="photo" src="../images/muffins-au-bacon-et-au-cheddar.jpg" alt="muffin" />
         </a>
         </figure>
         <br />
